# msda_v2

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
cmake/util/: ascendc_impl_build.py  preset_parse.py
examples/: CMakeLists.txt  build.sh  simu_one_layer.cpp
op_host/: CMakeLists.txt  multi_scale_deformable_attn_func_v2.cpp  multi_scale_deformable_attn_func_v2.h  multi_scale_deformable_attn_grad_v2.cpp  multi_scale_deformable_attn_grad_v2.h
op_kernel/: multi_scale_deformable_attn_func_v2.cpp  multi_scale_deformable_attn_grad_v2.cpp
scripts/: install.sh  upgrade.sh
